#5242: Fix entry-meta alignment on mobile

--- a/textbook/style.css
+++ b/textbook/style.css
@@ -5504,10 +5504,15 @@ body .jetpack-social-navigation li {
   padding: 0;
 }
 
+
 .single .hentry .wpnbpc .entry-meta,
 .single .hentry .wpnbpc .entry-meta a {
   background: transparent;
   color: #fff;
+}
+
+.single .wpnbha .entry-meta a {
+  width: unset;
 }
 
 /* ====================================================================================================================
